Bug 1729632 - use original file extension for temporary nsmail attachments. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D132560

--HG--
extra : rebase_source : 73b34ad6a8dcf88c723f93917abec2753affb32e
extra : amend_source : 5e11d9aee4e6a2136c291497f192b240c60166f0